--- a/template/public/index.html
+++ b/template/public/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- MUI -->
@@ -15,7 +16,7 @@
     <title>Template</title>
   </head>
 
-    <body>
+    <body style="overflow: hidden">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
     </body>
